Add signature verifier component.