@@ -5,4 +5,4 @@ WORKDIR /opt/app
 
 COPY target/gate-*.jar gate.jar
 
-CMD ["java", "-jar", "-XX:+UseCompactObjectHeaders", "gl.jar"]
+CMD ["java", "-jar", "-XX:+UseCompactObjectHeaders", "--enable-preview", "gl.jar"]
